240710 [add] : 커스텀 얼러트 모달 적용

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "genTypes": "yes | npx supabase gen types --lang=typescript --project-id \"ngtnbcqokvtyrilhkwpz\" --schema public > src/types/supabase.ts"
     },
     "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.1",
         "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-select": "^2.1.1",
