--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@tanstack/react-query-devtools": "^5.50.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "lucide-react": "^0.401.0",
         "next": "14.2.4",
         "react": "^18",
