fix: /write 페이지 POST addPost 함수로 수정, cancel&post 시 라우팅 되는 경로 수정, button 태그 type 수정, post 버튼 Image 태그 삭제 후 semantic 태그를 위해 button 태그로 대체

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".next"]
+  // 프리티어 느려짐 이슈로 ".next" 추가
 }
