--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "genTypes": "yes | npx supabase gen types --lang=typescript --project-id \"ngtnbcqokvtyrilhkwpz\" --schema public > src/types/supabase.ts"
+        "genTypes": "pnpm dlx supabase gen types --lang=typescript --project-id \"ageijospngqmyzptvsoo\" --schema public > src/types/supabase.ts"
     },
     "dependencies": {
         "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -33,17 +33,17 @@
         "sharp": "^0.33.4",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
-        "vaul": "^0.9.1",
         "zustand": "^4.5.4"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.4",
+        "eslint": "^9",
+        "eslint-config-next": "^14",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "typescript": "^5",
+        "prettier": "^3.3.3"
     }
 }
